# Harness

./: .env.example  .gitignore  README.md  harness.ps1.example  pyproject.toml
harness/: __init__.py  __main__.py  agent.py  cli.py  constants.py  display.py  events.py  markdown.py  prompts.py  tools.py
tests/: test_agent.py  test_cli.py  test_constants.py  test_display.py  test_events.py  test_markdown.py  test_prompts.py  test_resolve_path.py  test_streaming.py  test_tools.py
